HomePage fleshed out, heroku host added to allowed hosts

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -68,9 +68,9 @@ https://templatemo.com/tm-550-diagoona
                 <main class="tm-col-right">
                     <section class="tm-content">
                         <h2 class="mb-5 tm-content-title" style="font-family: 'Architects Daughter'; color: wheat;">Purpose of this website</h2>
-                        <p class="mb-5" style="font-family: 'Architects Daughter'; color: wheat;">Diagoona is provided by TemplateMo website. You are allowed to use this template for your websites. You are NOT allowed to redistribute this template ZIP file for a download purpose on any template collection website.</p>
+                        <p class="mb-5" style="font-family: 'Architects Daughter'; color: wheat;">I love anime, manga, japanese pop music and anime osts, however I struggle to understand the meaning behind the lyrics.</p>
                         <hr class="mb-5">
-                        <p class="mb-5" style="font-family: 'Architects Daughter'; color: wheat;">Diagoona is Bootstrap v4.4.1 layout. This BG is 50% transparent. You can set the background images auto play settings (true or false in line number 33) in templatemo-script.js file in js folder.</p>                        
+                        <p class="mb-5" style="font-family: 'Architects Daughter'; color: wheat;">This site is a lovely platform where people can share their knowledge of obscure anime lyrics.</p>                        
                         <a href="about.html" class="btn btn-primary">Continue...</a>
                     </section>
                 </main>
